# steno

./: .gitignore  INSTALL.md  README.md  install.bat  pyproject.toml  requirements.txt  setup.py  steno.py
lib/: embeddings.py  identification.py
