[project]
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
description = "Real-time audio transcription with speaker identification"
keywords = ["transcription", "audio", "speech-to-text", "speaker-identification"]
license = {file = "LICENSE"}
name = "steno-cli"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "sounddevice>=0.4.6",
  "pyaudiowpatch>=0.2.12.3",
  "faster-whisper>=0.10.0",
]

[project.scripts]
steno = "steno:main"

[project.urls]
Homepage = "https://github.com/dnhkng/GLaDOS"
Repository = "https://github.com/dnhkng/GLaDOS"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools]
packages = ["lib"]
py-modules = ["steno"]
